[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingbot-world"
version = "1.0.0"
description = "LingBot-World: Advancing Open-source World Models"
authors = [{ name = "Robbyant Team" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python>=4.9.0.80",
    "diffusers>=0.31.0",
    "transformers>=4.49.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "tqdm",
    "imageio",
    "easydict",
    "ftfy",
    "imageio-ffmpeg",
    "flash_attn",
    "numpy>=1.23.5,<2",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "isort", "mypy", "huggingface-hub[cli]"]

[project.urls]
homepage = "https://technology.robbyant.com/lingbot-world"
documentation = "https://github.com/robbyant/lingbot-world"
repository = "https://github.com/robbyant/lingbot-world"
huggingface = "https://huggingface.co/robbyant/lingbot-world-base-cam"

[tool.hatch.build.targets.wheel]
packages = ["wan"]

[tool.hatch.build.targets.sdist]
include = ["/wan"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.uv.extra-build-dependencies]
lingbot-world = ["hatchling"]
flash-attn = ["torch"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "TID252", # relative-imports
    "T10",    # debugger
]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "E501", # line-too-long
    "E721", # type-comparison
    "E741", # ambiguous-variable-name
    "F541", # f-string-missing-placeholders
    "F811", # redefined-while-unused
    "F841", # unused-variable
]
fixable = ["ALL"]
